--- a/style.css
+++ b/style.css
@@ -7,6 +7,57 @@
   font-family: 'Roboto', sans-serif;
 }
 
+li {
+  list-style-type: none;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 16px;  
+}
+
+.title {
+  font-size: 100px;
+  margin-bottom: 12px;
+  text-align: left;
+  line-height: 1;
+}
+
+.blue {
+  color: blue;
+}
+
+/*
+
+LANDING PAGE
+
+*/
+
+#landing-page {
+  min-height: 100vh;
+}
+
+.header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 700px;
+}
+
+.header__para {
+  font-size: 18px;
+  line-height: 2;
+  max-width: 360px;
+}
+
+/* 
+
+NAVIGATION
+
+*/
+
 #personal-logo {
   width: 50px;
   height: 50px;
@@ -16,4 +67,28 @@
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.nav__link--list {
+  display: flex;
+}
+
+.nav__link {
+  margin: 0 12px;
+}
+
+.nav__link--anchor {
+  text-decoration: none;
+  font-size: 16px;
+  color: #242424;
+  font-weight: 700;
+}
+
+.fa-solid {
+  font-size: 20px;
 }
