--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ li {
   list-style-type: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
 p {
   line-height: 1.5;
   font-size: 16px;  
@@ -25,6 +33,18 @@ p {
 
 .blue {
   color: blue;
+}
+
+.click {
+  transition: all 300ms ease;
+}
+
+.click:hover {
+  transform: scale(1.1);
+}
+
+.click:active {
+  transform: scale(0.8);
 }
 
 /*
@@ -44,12 +64,45 @@ LANDING PAGE
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 700px;
+  padding: 0 30px;
 }
 
 .header__para {
   font-size: 18px;
   line-height: 2;
   max-width: 360px;
+}
+
+.social__links {
+  margin-top: 16px;
+  display: flex;
+}
+
+.social__link {
+  background-color: blue;
+  color: white;
+  padding: 8px;
+  width: 32px;
+  height: 32px;
+  margin-right: 16px;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  border-radius: 500px;  
+}
+
+.mail__btn {
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  border-radius: 500px;
+  border: none;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 1px;
+  right: 1px;
+  margin: 16px;
 }
 
 /* 
@@ -65,13 +118,14 @@ NAVIGATION
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
   max-width: 800px;
   height: 100px;
   margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__link--list {
@@ -83,7 +137,6 @@ nav {
 }
 
 .nav__link--anchor {
-  text-decoration: none;
   font-size: 16px;
   color: #242424;
   font-weight: 700;
