--- a/style.css
+++ b/style.css
@@ -35,6 +35,17 @@ p {
   color: blue;
 }
 
+.container {
+  padding: 50px 0;
+}
+
+.row {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
 .click {
   transition: all 300ms ease;
 }
@@ -100,9 +111,44 @@ LANDING PAGE
   background-color: black;
   color: white;
   position: absolute;
-  bottom: 1px;
-  right: 1px;
-  margin: 16px;
+  bottom: 16px;
+  right: 16px;
+}
+
+.scroll {
+  position: absolute;
+  left: 50%;
+  bottom: 16px;
+  transform: 50%;
+  transform: translateX(-50%);
+}
+
+.scroll__icon {
+  width: 24px;
+  height: 32px;
+  border: 2px solid black;
+  border-radius: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.scroll__icon:after {
+  content: "";
+  width: 4px;
+  height: 6px;
+  background-color: #242424;
+  border-radius: 500px;
+  animation: scrollEffect 1000ms infinite alternate-reverse;
+}
+
+@keyframes scrollEffect {
+  0% {
+    transform: translateY(3px);
+  }
+  100% {
+    transform: translateY(-3px);
+  }
 }
 
 /* 
@@ -143,5 +189,72 @@ nav {
 }
 
 .fa-solid {
+  font-size: 25px;
+}
+
+/*
+
+My Projects
+
+*/
+
+.section__title {
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+
+.project__img {
+  width: 100%;
+}
+
+.project__wrapper {
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+  overflow: hidden;
+}
+
+.project__wrapper:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
+}
+
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: opacity 300ms, transform 450ms ease;
+  color: white;
+  max-width: 450px;
+}
+
+.project__wrapper--bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.7;
+}
+
+.project__description--title {
+  font-size: 40px;
+}
+
+.project__description--sub-title {
+  margin-top: 8px;
+}
+
+.project__description--link {
+  color: white;
   font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--para {
+  margin: 16px 0;
 }
