--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* 
+Timothy Olofson
+11/21/20024
+Fromtend Simplified FES
+Week 4 - Advanced E-Portfolio
+*/
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
 
 * {
@@ -41,17 +49,25 @@ input, textarea {
   border-left: none;
   border-right: none;
   height: 40px;
+  transition: all 300ms ease;
 }
 
 textarea {
   resize: vertical;
-  max-height: 230px;
   margin-top: 8px;
 }
 
 label {
   font-size: 12px;
   font-weight: bold;
+}
+
+input:hover, textarea:hover {
+  border-color: gray;
+}
+
+input:focus, textarea:focus {
+  border-color: blue;
 }
 
 .blue {
@@ -71,6 +87,7 @@ label {
 }
 
 .click {
+  cursor: pointer;
   transition: all 300ms ease;
 }
 
@@ -240,7 +257,7 @@ nav {
   font-weight: 700;
 }
 
-.fa-solid {
+.fa-circle-half-stroke {
   font-size: 16px;
 }
 
@@ -270,6 +287,7 @@ THE MODAL
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 
 .modal__about {
@@ -292,12 +310,29 @@ THE MODAL
   transition: all 300ms ease;
 }
 
+.fa-html5 {
+  color: orange;
+}
+
 .html5 {
   right: 28px;
 }
 
+.fa-css3-alt {
+  color: green;
+}
+
+.fa-js {
+  color: red;
+  
+}
+
 .javascript {
   right: 42.5px;
+}
+
+.fa-react {
+  color: lightblue;
 }
 
 .modal__language:hover .language__name {
@@ -349,7 +384,85 @@ THE MODAL
   margin-bottom: 16px;
 }
 
+.message {
+  height: 150px;
+  max-height: 150px;
+}
 
+.form__submit {
+  background-color: blue;
+  color: white;
+  border: 2px solid blue;
+  font-size: 20px;
+  font-weight: 700;
+  width: 100%;
+  max-width: 240px;
+  padding: 12px 24px;
+  transition: all 300ms ease;
+}
+
+.form__submit:hover {
+  border-color: white;
+  background-color: transparent;
+}
+
+.form__submit:active {
+  border-color: blue;
+  color: blue;
+}
+
+.modal__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+}
+
+.modal__overlay--loading {
+  background-color: black;
+}
+
+.modal__overlay--success {
+  background-color: rgb(0, 189, 0);
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  padding: 32px;
+
+}
+
+.modal__overlay--visible {
+  z-index: 1;
+}
+
+.fa-spinner {
+  font-size: 80px;
+  animation: spinner 1000ms infinite linear;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.modal__exit {
+  position: absolute;
+  color: white;
+  font-size: 32px;
+  font-weight: bolder;
+  top: 30px;
+  right: 40px;
+  z-index: 100;
+}
 
 /*
 
