--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ Week 4 - Advanced E-Portfolio
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  
+}
+
 p {
   line-height: 1.5;
   font-size: 16px;  
