--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ button {
   cursor: pointer;
 }
 
+section {
+  transition: all 300ms ease;
+}
+
 .title {
   font-size: 100px;
   margin-bottom: 12px;
@@ -92,11 +96,11 @@ input:focus, textarea:focus {
 
 .click {
   cursor: pointer;
-  transition: all 300ms ease;
+  transition: all 500ms ease;
 }
 
 .click:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .click:active {
@@ -129,6 +133,56 @@ input:focus, textarea:focus {
 .link__hover-effect:hover:after {
   left: 0;
   width: 100%;
+}
+
+nav,
+.scroll,
+.header {
+
+  opacity: 1;
+  visibility: visible;
+  transition: all 500ms 500ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+
+  opacity: 0;
+  visibility: hidden;
+  transition: all 500ms;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para {
+  
+  color: white;
+}
+
+.dark-theme section {
+  background-color: black;
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+  background-color: white;
+}
+
+.dark-theme .mail__btn {
+  background-color: white;
+  color: black;
 }
 
 /*
@@ -283,7 +337,7 @@ THE MODAL
   overflow: hidden;
   display: flex;
   visibility: hidden;
-  z-index: 1;
+  z-index: -1;
   transition: visiblity 1s, z-index 1s, box-shadow 0.5s ease;
 }
 
@@ -300,9 +354,16 @@ THE MODAL
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 300ms ease-in;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact {
+  transform: translateX(0%);
 }
 
 .modal__about {
+  transform: translateX(-110%);
   background-color: white;
 }
 
@@ -357,7 +418,7 @@ THE MODAL
   transform: scale(0.9);
 }
 
-.fa-brands {
+.langauge--wrapper {
   font-size: 48px;
 }
 
@@ -374,6 +435,7 @@ THE MODAL
 }
 
 .modal__contact {
+  transform: translateX(110%);
   background-color: black;
   color: white;
 }
@@ -429,7 +491,7 @@ THE MODAL
   height: 100%;
   top: 0;
   left: 0;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -450,6 +512,7 @@ THE MODAL
 
 .modal__overlay--visible {
   z-index: 1;
+  display: flex;
 }
 
 .fa-spinner {
